PROMETHEUS/prometheus_ingress.yml
#apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheous-ingress
  # annotations:
#  nginx.ingress.kubernetes.io/use-regex: "true"
#  nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      #- path: /prometheous(/|$)(.*)
      - path: /prometheous
        pathType: Prefix
        #pathType: ImplementationSpecific
        backend:
          service:
            name: prometheus-server
            port:
              number: 80
